<resources>
    <string name="app_name">Economic Calender</string>
    <string name="filter">Filter</string>
    <string name="priority">Priority</string>
    <string name="countries">Countries</string>
    <string name="previousStr">PREV.</string>
    <string name="forecastStr">FOR.</string>
    <string name="actualStr">ACT.</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="country_ae">United Arab Emirates</string>
    <string name="country_ar">Argentina</string>
    <string name="country_at">Austria</string>
    <string name="country_au">Australia</string>
    <string name="country_be">Belgium</string>
    <string name="country_bg">Bulgaria</string>
    <string name="country_bh">Bahrain</string>
    <string name="country_br">Brazil</string>
    <string name="country_bw">Botswana</string>
    <string name="country_ca">Canada</string>
    <string name="country_ch">Switzerland</string>
    <string name="country_cl">Chile</string>
    <string name="country_cn">China</string>
    <string name="country_co">Colombia</string>
    <string name="country_cr">Costa Rica</string>
    <string name="country_cy">Cyprus</string>
    <string name="country_cz">Czech Republic</string>
    <string name="country_de">Germany</string>
    <string name="country_dk">Denmark</string>
    <string name="country_ec">Ecuador</string>
    <string name="country_ee">Estonia</string>
    <string name="country_eg">Egypt</string>
    <string name="country_es">Spain</string>
    <string name="country_eu">European Union</string>
    <string name="country_fi">Finland</string>
    <string name="country_fr">France</string>
    <string name="country_gb">Great Britain</string>
    <string name="country_gr">Greece</string>
    <string name="country_hk">Hong Kong</string>
    <string name="country_hr">Croatia</string>
    <string name="country_hu">Hungary</string>
    <string name="country_id">Indonesia</string>
    <string name="country_ie">Ireland</string>
    <string name="country_il">Israel</string>
    <string name="country_in">India</string>
    <string name="country_is">Iceland</string>
    <string name="country_it">Italy</string>
    <string name="country_jo">Jordan</string>
    <string name="country_jp">Japan</string>
    <string name="country_ke">Kenya</string>
    <string name="country_kr">South Korea</string>
    <string name="country_kw">Kuwait</string>
    <string name="country_lb">Lebanon</string>
    <string name="country_lk">Sri Lanka</string>
    <string name="country_lt">Lithuania</string>
    <string name="country_lu">Luxemburg</string>
    <string name="country_lv">Latvia</string>
    <string name="country_ma">Morocco</string>
    <string name="country_mt">Malta</string>
    <string name="country_mu">Mauritius</string>
    <string name="country_mw">Malawi</string>
    <string name="country_mx">Mexico</string>
    <string name="country_my">Malaysia</string>
    <string name="country_na">Namibia</string>
    <string name="country_nl">Netherlands</string>
    <string name="country_no">Norway</string>
    <string name="country_nz">New Zealand</string>
    <string name="country_om">Oman</string>
    <string name="country_pe">Peru</string>
    <string name="country_ph">Philippines</string>
    <string name="country_pk">Pakistan</string>
    <string name="country_pl">Poland</string>
    <string name="country_ps">Palestine</string>
    <string name="country_pt">Portugal</string>
    <string name="country_qa">Qatar</string>
    <string name="country_ro">Romania</string>
    <string name="country_ru">Russia</string>
    <string name="country_rw">Ruanda</string>
    <string name="country_sa">Saudi Arabia</string>
    <string name="country_se">Sweden</string>
    <string name="country_sg">Singapore</string>
    <string name="country_si">Slovenia</string>
    <string name="country_sk">Slovakia</string>
    <string name="country_th">Thailand</string>
    <string name="country_tn">Tunisia</string>
    <string name="country_tr">Turkey</string>
    <string name="country_tw">Taiwan</string>
    <string name="country_tz">Tanzania</string>
    <string name="country_ua">Ukraine</string>
    <string name="country_us">USA</string>
    <string name="country_ve">Venezuela</string>
    <string name="country_vn">Vietnam</string>
    <string name="country_za">South Africa</string>
    <string name="country_zw">Zimbabwe</string>

    <string name="intro_title_0">Real-Time Economic Events</string>
    <string name="intro_desc_0">The Economic Calendar app displays real-time data on global economic events, such as GDP reports, inflation figures, employment statistics, and central bank announcements. These events often influence market movements.</string>

    <string name="intro_title_1">Filter by Country/Priority</string>
    <string name="intro_desc_1">You can filter events by country or priority to track specific markets. This helps you focus on the data most relevant to your interests or investments.</string>

    <string name="intro_title_2">Event Descriptions</string>
    <string name="intro_desc_2">The app provides detailed descriptions for each event, along with forecasts and previous results. This allows you to compare actual outcomes to expectations.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="version">Version</string>
    <string name="information">Information</string>
    <string name="no_data_available">No data available!</string>
    <string name="open_settings">Open Settings</string>
    <string name="low_medium_high">Low, Medium, High</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="selected_countries">Selected Countries</string>
    <string name="enter_country_name">Enter Country Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="select_time_zone">Select time zone</string>
    <string name="release_date">Release Date:</string>
    <string name="period">Period:</string>
    <string name="date">Date</string>
    <string name="strfor">For.</string>
    <string name="act">Act.</string>
    <string name="n_a">N/A</string>
    <string name="try_again">Please Try After sometime!!!</string>
    <string name="check_internet_connection">Check Internet Connection!!!</string>
    <string name="list">List</string>
    <string name="chart">Chart</string>
    <string name="description">Description</string>
    <string name="search_fruits">Search fruits</string>
    <string name="years">Years</string>
    <string name="empty_data">Empty Data</string>
    <string name="cd_back_button">Back Button</string>
    <string name="cd_country_flag">Country Flag</string>
    <string name="cd_menu_show_button">Menu Show Button</string>
    <string name="cd_filter_data">Filter Data</string>
    <string name="cd_previous_button">Previous Button</string>
    <string name="cd_next_button">Next Button</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="cd_arrow_down">Arrow Down</string>
    <string name="cd_country_selected">Country Selected</string>
    <string name="time_zone">Time Zone</string>
    <string name="settings">Settings</string>
    <string name="how_to_use">How To Use</string>
    <string name="event_time">Event Time</string>

</resources>