<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingTop="@dimen/_3sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingBottom="@dimen/_3sdp">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/tvFor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.7"
        android:gravity="center"
        android:text="@string/strfor"
        android:textAllCaps="true"
        android:textColor="#FFEB3B"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/tvAct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.7"
        android:gravity="center"
        android:text="@string/act"
        android:textAllCaps="true"
        android:textColor="#00FF0A"
        android:textSize="@dimen/_12sdp" />
</LinearLayout>