<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_10"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_18sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_time_zone"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvTimeZone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:backgroundTint="#AAAAAA"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
</LinearLayout>