<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/top_round"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/low_medium_high"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/cd_arrow_down"
                android:src="@drawable/ic_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPriorityFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_rounded_10"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/llPriorityFilterLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/ivLowImage"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/calendar_prior_0" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/low"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/icDoneLow"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_done" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPriorityFilterMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/ivMediumImage"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/calendar_prior_0" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/icDoneMedium"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_done" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPriorityFilterHight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/ivHighImage"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/calendar_prior_0" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/high"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/icDoneHigh"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_done" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/llCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/countries"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_countries"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/cd_arrow_down"
                android:src="@drawable/ic_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                style="@style/CustomSearchViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:queryHint="@string/enter_country_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCountryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:scrollbars="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:backgroundTint="#AAAAAA"
                android:gravity="center"
                android:minHeight="@dimen/_40sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:minHeight="@dimen/_40sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>