<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/release_date"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/period"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/prevStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previousStr"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_12sdp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFEB3B"
                android:textSize="@dimen/_14sdp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/foreStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forecastStr"
                android:textColor="#FFEB3B"
                android:textSize="@dimen/_12sdp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF0A"
                android:textSize="@dimen/_14sdp"
                android:typeface="sans"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:importantForAccessibility="no"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/actStr"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/actualStr"
                android:textColor="#00FF0A"
                android:textSize="@dimen/_12sdp"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_4sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.7"
            android:gravity="center"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.7"
            android:gravity="center"
            android:text="@string/strfor"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.7"
            android:gravity="center"
            android:text="@string/act"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvFragList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:listitem="@layout/item_fragment_list" />
</LinearLayout>